add main classes